# SalaryPartners

./: .env  .env.example  .gitignore  pyproject.toml
scripts/: dump_project.py
src/: config.py  main.py
src/agents/: architect_agent.py  code_agent.py  qa_agent.py  scaffolder_agent.py
src/office/: office_manager.py  state.py  workflow.py
src/tools/: file_ops.py  test_runner.py
src/utils/: code_generator.py  parsers.py  schema.py
